# game-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/shaders/: amb_light_fragment.glsl  default_fragment.glsl  dir_light_fragment.glsl  dir_light_vertex.glsl  g_buffer_fragment.glsl  g_buffer_vertex.glsl  point_light_fragment.glsl  shadow_depth_vertex.glsl
src/: entities.c  entities.h  game.c  game.h  main.c  render.c  render.h  shader.c  shader.h  texture.c  texture.h  window.c  window.h
src/ecs/: em.c  em.h
src/ecs/components/: amb_light.h  camera.h  component.h  dir_light.h  mesh_renderer.h  point_light.h  relationship.h  spectator.h  transform.h
src/ecs/systems/: amb_light_sys.c  amb_light_sys.h  camera_sys.c  camera_sys.h  dir_light_sys.c  dir_light_sys.h  mesh_renderer_sys.c  mesh_renderer_sys.h  point_light_sys.c  point_light_sys.h  spectator_sys.c  spectator_sys.h  transform_sys.c  transform_sys.h
src/math/: affine.c  affine.h  cam.c  cam.h  mat4.c  mat4.h  types.h  util.c  util.h  vec3.c  vec3.h  vec4.c  vec4.h
src/mesh/: mesh.c  mesh.h  obj_loader.c  obj_loader.h  triangulation.c  triangulation.h
src/primitives/: box.c  box.h  plane.c  plane.h
src/utils/: array.c  array.h  hash.c  hash.h  list.c  list.h
